Reorganize routes and controllers + swagger.yaml
