# server/routes/userRoutes.js
@@ -21,12 +21,6 @@ router.put(
 
 router.get('/signout', userController.signOut)
 
-router.post('/account', userController.createAccount)
-
-router.get('/useraccounts/:id', userController.getAccounts)
-
-router.get('/getaccount/:id', userController.getOneAccount)
-
 router.post('/transaction', userController.createTransaction)
 
 router.get('/accountbyid/:id/alltransactions', userController.getOneAccountTransactions)
